# polymarket

./: .gitignore  README.md  program.md  pyproject.toml
notebooks/: eda.py
scripts/: collect_crypto_history.py  crypto_backtest.py  get_trades.py  get_user_data.py
src/: ai_strategy.py  crypto_market.py  db.py  execution.py  fetch.py  settings.py  strategy.py  transaction.py
