[project]
name = "polymarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dome-api-sdk>=1.0",
    "duckdb>=1.4.4",
    "duckdb-engine>=0.11.0",
    "ipykernel>=7.2.0",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "notebook>=7.5.5",
    "pandas>=2.0,<3.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "requests>=2.28",
    "scikit-learn>=1.8.0",
    "tqdm>=4.66",
    "xgboost>=3.2.0",
]
